# Local-Coding-Assistant

./: .gitignore  Makefile  README.md  cli.py  config.yml  pyproject.toml
src/py_coding_assistant/: __init__.py  agents.py  repo.py
src/py_coding_assistant/llms/: __init__.py  base.py  dummy.py  factory.py  ollama.py
